@startuml erd
entity Users {
  id: bigint [PK]
  email : text
  password: text
  role_name: text
}
entity Passengers {
  id: bigint [PK]
  organization_id: bigint [FK]
  name: text
  phone: text
  address: text
  activated: boolean
}
entity Clients {
  id: bigint [PK]
  user_id: bigint [FK]
  first_name: text  
  last_name: text 
  username: text
  phone_number: text

}
entity Organizations {
  id: bigint [PK]
  user_id: bigint [FK]
  name: text
  phone_number: text
  postal_code: text
  address: text 
}

entity Routes {
  id: bigint [PK]
  organiztion_id: bigint [FK]
  source_name: text
  source_longitude: double
  source_latitude: double
  destination_name: text
  destination_longitude: double
  destination_latitude: double
}
entity Paths {
  id: bigint [PK]
  route_id: bigint [FK]
  name: text
  price: double
}
entity Stops {
  id: bigint [PK]
  path_id: int [FK]
  name: text
  longtitude: double
  latitude: double
}
entity Bookings {
  id: bigint [PK]
  passenger_id: bigint [FK]
  client_id: bigint [FK]
  trip_id: bigint [FK]
  
}
entity Wallet {
  id: bigint [PK]
  organization_id: bigint [FK]
  client_id: bigint [FK]
  passenger_id: bigint [FK]
  balance: double
}
entity Trips {
  id: bigint [PK]
  path_id: bigint [FK]
  organization_id: bigint [FK]
  datetime: datetime
  public : boolean
  num_seats: integer
  num_users: integer
}
entity Complaints {
  id: bigint [PK]
  passenger_id: bigint [FK]
  client_id: bigint [FK]
  message: text
}
entity Payment_details {
  id: bigint [PK]
  trip_id: bigint [FK]
  amount: double
  currency: text
  date: datetime
}
Users ||--|| Passengers
Users ||--|| Organizations
Users ||--|| Clients
Passengers ||---o{ Complaints
Clients ||---o{ Complaints

Organizations ||--o{ Passengers
Organizations ||--o{ Routes
Organizations ||--o{ Trips
Organizations ||--|| Wallet
Passengers ||--|| Wallet
Clients ||--|| Wallet
Trips ||--o| Payment_details

Routes ||--|{ Paths
Paths ||--|{ Stops
Paths ||--o{ Trips
Passengers ||--o{ Bookings
Clients ||--o{ Bookings
Trips ||--o{ Bookings


@enduml